...
                                    <constraint firstAttribute="height" constant="30" id="jci-Sf-IhD"/>
                                    <constraint firstAttribute="width" constant="46" id="jmF-Pj-4Wa">
                                        <variation key="heightClass=regular-widthClass=compact" constant="100"/>
                                    </constraint>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                <state key="normal" title="Choose Image"/>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="I35-P7-G25"/>
                                        <exclude reference="Pyv-zu-cjc"/>
                                        <exclude reference="jci-Sf-IhD"/>
                                        <exclude reference="jmF-Pj-4Wa"/>
...
